chore: ignorar node_modules